<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="header" translatable="false">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_this_app">Поделиться приложением</string>
    <string name="support_message">Написать в поддержку</string>
    <string name="terms">Пользовательское соглашение</string>
    <string name="terms_link">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="practicum_link">https://practicum.yandex.ru/android-developer/?from=main_search_item</string>
    <string name="email">mario.cubic@yandex.ru</string>
    <string name="theme_of_mail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_internet">Проблемы со связью \n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="search_history">История поиска</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="length">Длительность</string>
    <string name="collection">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
</resources>