<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/header"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:textStyle="normal"
        android:fontFamily="@font/ya_text_medium"



        />
    </FrameLayout>
    <Button
        android:id="@+id/search_button"
        style="@style/MainActivityButton"
        android:text="@string/search"
        app:icon = "@drawable/search_icon"
        >


    </Button>
    <Button
        android:id="@+id/media_button"
        style="@style/MainActivityButton"
        android:text="@string/media_library"
        app:icon = "@drawable/media_icon"
        >

    </Button>
    <Button
        android:id="@+id/set_button"
        style="@style/MainActivityButton"
        android:text="@string/settings"
        app:icon = "@drawable/settings_icon">

    </Button>

</LinearLayout>