<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".SettingsActivity">



    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back_arrow_48"
        app:title="@string/settings"
        app:titleTextAppearance="@style/ToolbarText"
        app:navigationIconTint="@color/text_color"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_buttons_height"
        android:layout_marginTop="24dp"
        android:paddingStart="16dp"
        android:paddingEnd="6dp"
        android:text="@string/dark_theme"
        app:thumbTint="@color/switch_color_thumb"
        app:trackTint="@color/switch_color_track"
        android:theme="@style/TextFormat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:id="@+id/share_app"
        android:theme="@style/TextFormat"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_buttons_height"
        android:drawablePadding="12dp"
        android:gravity="center|start"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        android:text="@string/share_this_app"
        app:drawableEndCompat="@drawable/ic_share_24"
        app:drawableTint="@color/ic_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themeSwitcher" />

    <TextView
        android:id="@+id/support"
        android:theme="@style/TextFormat"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_buttons_height"
        android:drawablePadding="12dp"
        android:gravity="center|start"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        android:text="@string/support_message"
        app:drawableEndCompat="@drawable/ic_support_24"
        app:drawableTint="@color/ic_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share_app" />

    <TextView
        android:id="@+id/terms"
        android:theme="@style/TextFormat"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_buttons_height"
        android:drawablePadding="12dp"
        android:gravity="center|start"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        android:text="@string/terms"
        app:drawableEndCompat="@drawable/ic_right_arrow_24"
        app:drawableTint="@color/ic_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/support" />







</androidx.constraintlayout.widget.ConstraintLayout>





